<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10sp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="15dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tvBadge"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_text_circle_red"
                android:gravity="center"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_alert"
                android:textColor="#ffffff"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="@id/tvContent"
                app:layout_constraintEnd_toStartOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@color/warm_red"
                android:minLines="1"
                android:text="On your processing"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvProcessing"
                app:layout_constraintEnd_toEndOf="@id/tvContent"
                app:layout_constraintTop_toBottomOf="@id/tvContent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:minLines="1"
                android:text="Title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvBadge"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="Content"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvProcessing"
                app:layout_constraintStart_toStartOf="@+id/tvContent"
                app:layout_constraintTop_toBottomOf="@+id/tvContent" />

            <TextView
                android:id="@+id/tvProcessing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/processing_status"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBadge" />

            <Button
                android:id="@+id/processing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue_selector"
                android:minWidth="0sp"
                android:minHeight="0sp"
                android:text="@string/processing"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintEnd_toStartOf="@+id/finish"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProcessing"
                tools:visibility="gone" />

            <Button
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue_selector"
                android:minWidth="0sp"
                android:minHeight="0sp"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintEnd_toStartOf="@+id/cancel"
                app:layout_constraintStart_toEndOf="@+id/processing"
                app:layout_constraintTop_toBottomOf="@id/tvProcessing"
                tools:visibility="gone" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue_selector"
                android:minWidth="0sp"
                android:minHeight="0sp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/finish"
                app:layout_constraintTop_toBottomOf="@id/tvProcessing"
                tools:visibility="gone" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProcessing" />

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="15sp"
                android:layout_marginBottom="5sp"
                android:contextClickable="false"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:autoLink="web"
                    android:scrollbars="vertical"
                    android:textSize="15sp" />
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
